# depot

./: .gitignore  Cargo.toml
depot/: Cargo.toml
depot-cli/: Cargo.toml
depot-cli/src/: main.rs
depot-core/: Cargo.toml
depot-core/src/: depot_handle.rs  helpers.rs  lib.rs
depot/src/: depot_handle.rs  helpers.rs  lib.rs  types.rs
spec/: specv1.md
