[package]
edition = "2021"
name = "depot-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
console = "0.15.5"
depot = {path = "../depot"}
glob = "0.3.0"
indicatif = "0.17.3"
humansize = "2.1.3"
