[package]
edition = "2021"
name = "depot-cli"
version = "0.1.0"

[profile.release]
lto = true
opt-level = 3
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
console = "0.15.5"
depot-core = {path = "../depot-core"}
glob = "0.3.0"
humansize = "2.1.3"
indicatif = "0.17.3"
